--- a/setup.cfg
+++ b/setup.cfg
@@ -4,10 +4,10 @@ universal = 1
 [metadata]
 project = EMF
 name = emf
-version = 1.0.0
+version = 0.0.1
 author = Matt Pewsey
 copyright = 2019, Matt Pewsey
-description = Tools for performing a transmission line EMF analysis.
+description = Tools for performing EMF analysis on transmission lines.
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = BSD 3-Clause License
